Fixed step 3 title overlap on smaller screen sizes

--- a/app/static/css/admin/event_wizard.css
+++ b/app/static/css/admin/event_wizard.css
@@ -228,3 +228,13 @@ span.round-tab:hover {
     }
 }
 
+@media (max-width: 1400px) {
+    .connecting-line {
+        width: 52% !important;
+    }
+
+    .wizard .nav-tabs {
+        width: 91% !important;
+    }
+
+}
